--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
     "@react-navigation/native": "^6.1.7",
@@ -17,6 +18,7 @@
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.23.0",
     "langchain": "^0.0.98",
+    "mobx": "^6.9.0",
     "native-base": "^3.4.28",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
