questions rendering correctly and next button working correctly

--- a/app.json
+++ b/app.json
@@ -11,6 +11,14 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
+    "bodyParser": {
+      "json": {
+        "type": "application/json"
+      },
+      "raw": {
+        "type": "application/octet-stream"
+      }
+    },    
     "assetBundlePatterns": [
       "**/*"
     ],
