--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "langchain": "^0.0.98",
     "mobx": "^6.9.0",
     "native-base": "^3.4.28",
+    "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-safe-area-context": "^4.6.3",
