--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "raw-body": "^2.5.2",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-safe-area-context": "^4.6.3",
     "react-navigation-stack": "^2.10.4"
   },
