--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
+    "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@tanstack/react-query": "^4.29.19",
