--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
     "@react-native-picker/picker": "^2.4.10",
+    "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@tanstack/react-query": "^4.29.19",
@@ -26,7 +28,10 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-bouncy-checkbox": "^3.0.7",
-    "react-native-safe-area-context": "^4.6.3",
+    "react-native-paper": "^5.9.1",
+    "react-native-safe-area-context": "^4.7.1",
+    "react-native-screens": "^3.22.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
