--- a/package.json
+++ b/package.json
@@ -10,27 +10,28 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-firebase/auth": "^18.1.0",
     "@react-native-firebase/firestore": "^18.1.0",
-    "@react-native-picker/picker": "^2.4.10",
+    "@react-native-picker/picker": "2.4.10",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@tanstack/react-query": "^4.29.19",
-    "expo": "~48.0.18",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^9.23.0",
     "langchain": "^0.0.98",
     "mobx": "^6.9.0",
     "native-base": "^3.4.28",
     "raw-body": "^2.5.2",
     "react": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-paper": "^5.9.1",
-    "react-native-safe-area-context": "^4.7.1",
-    "react-native-screens": "^3.22.1",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "^13.10.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4"
   },
