--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "18.2.0",
     "react-native": "0.72.3",
     "react-native-bouncy-checkbox": "^3.0.7",
+    "react-native-calendars": "^1.1302.0",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
