--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "native-base": "^3.4.28",
     "raw-body": "^2.5.2",
     "react": "18.2.0",
-    "react-native": "0.72.3",
+    "react-native": "0.72.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-calendars": "^1.1302.0",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-svg": "^13.10.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^9.2.0",
     "react-navigation-stack": "^2.10.4"
   },
